@@ -11,3 +11,4 @@ MAXPAGESIZE=0x1000
 # top of simulator memory (32MB).
 OTHER_RELOCATING_SECTIONS='PROVIDE (_stack = 0x2000000);'
 GENERATE_SHLIB_SCRIPT=yes
+GENERATE_PIE_SCRIPT=yes
